@@ -88,7 +88,7 @@ Group: API Documentation  {
       File: jqplot.cursor.js  (plugins\jqplot.cursor.js)
       File: jqplot.dateAxisRenderer.js  (plugins\jqplot.dateAxisRenderer.js)
       File: jqplot.donutRenderer.js  (plugins\jqplot.donutRenderer.js)
-      File: jqplot.dragable.js  (plugins\jqplot.dragable.js)
+      File: jqplot.draggable.js  (plugins\jqplot.draggable.js)
       File: jqplot.enhancedLegendRenderer.js  (plugins\jqplot.enhancedLegendRenderer.js)
       File: jqplot.enhancedPieLegendRenderer.js  (plugins\jqplot.enhancedPieLegendRenderer.js)
       File: jqplot.funnelRenderer.js  (plugins\jqplot.funnelRenderer.js)
