@@ -245,13 +245,11 @@ options =
         
     },
     
-    // Dragable
-    // Dragable options are specified with the "dragable" object at the top level
+    // Draggable
+    // Draggable options are specified with the "draggable" object at the top level
     // of the options object.
-    // (Note that 'dragable' is the name and spelling used by the plugin, even though
-    // the correct word is 'draggable'.)
     
-    dragable: {
+    draggable: {
         color: undefined,       // custom color to use for the dragged point and dragged line
                                 // section. default will use a transparent variant of the line color.
         constrainTo: 'none',    // Constrain dragging motion to an axis: 'x', 'y', or 'none'.
