@@ -184,7 +184,7 @@
      *   enabled in the individual plot options.  Default: false.
      *   This property sets the "show" property of certain plugins to true or false.
      *   Only plugins that can be immediately active upon loading are affected.  This includes
-     *   non-renderer plugins like cursor, dragable, highlighter, and trendline.
+     *   non-renderer plugins like cursor, draggable, highlighter, and trendline.
      * defaultHeight - Default height for plots where no css height specification exists.  This
      *   is a jqplot wide default.
      * defaultWidth - Default height for plots where no css height specification exists.  This
